--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+</head>
+
+<body onload="redirect();"></body>
+
+<script>
+    function redirect() {
+        window.location.replace("https://valentineu.com");
+    }
+</script>
+
+</html>
